2023-08-14T16:08:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5857985714 # 1822
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
* notice: last 14d: unq all: 3 15
* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 715 1328
* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 715 1329
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-08-14]

2023-08-14T08:09:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5853375989 # 1821
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 714 1327
* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 715 1328
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-14]

2023-08-14T00:32:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5850441453 # 1820
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 706 1313 / 714 1327
* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 714 1327
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-31] / []

2023-08-13T16:07:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5848307046 # 1819