@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-14T16:08:02Z",
+  "timestamp" : "2023-08-15T08:08:57Z",
   "count_outdated" : 1314,
   "uniques_outdated" : 707,
-  "count" : 1329,
-  "uniques" : 715,
+  "count" : 1330,
+  "uniques" : 716,
   "clones" : [
     {
       "timestamp": "2023-08-08T00:00:00Z",
@@ -64,6 +64,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
