@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 3,
   "clones": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2023-08-14T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
