@@ -1,3 +1,12 @@
+2023-08-15T08:08:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5865001229 # 1824
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
+* notice: last 14d: unq all: 3 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 715 1329
+* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 716 1330
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-08-15]
+
 2023-08-14T16:08:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5857985714 # 1822
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
